# aegis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  STEERING.md  tmpclaude-f8cd-cwd
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  version.yml
agents/: AGENTS.md
crates/aegis-app/: Cargo.toml  build.rs
crates/aegis-app/appimage/: aegis.appdata.xml  aegis.desktop  com.aegis.app.appdata.xml  com.aegis.app.desktop
crates/aegis-app/assets/: aegis.desktop
crates/aegis-app/assets/icons/: README.md  icon.icns
crates/aegis-app/assets/wix/: README.md
crates/aegis-app/debian/: postinst  postrm
crates/aegis-app/src/: autostart.rs  lib.rs  main.rs  uninstall.rs  updater.rs
crates/aegis-app/wix/: License.rtf  main.wxs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: auth.rs  community_rules.rs  content_rules.rs  extension_install.rs  interception.rs  lib.rs  model_downloader.rs  notifications.rs  profile.rs  profile_proxy.rs  protection.rs  rule_engine.rs  site_registry.rs  time_rules.rs
crates/aegis-core/src/classifier/: category.rs  image.rs  keyword.rs  mod.rs  prompt_guard.rs  sentiment.rs  tiered.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/src/: ca.rs  domains.rs  error.rs  extractor.rs  handler.rs  image_extractor.rs  lib.rs  proxy.rs  setup.rs  smart_parser.rs  state_cache.rs
crates/aegis-server/: Cargo.toml
crates/aegis-server/src/: error.rs  handlers.rs  lib.rs  models.rs  state.rs
crates/aegis-storage/: Cargo.toml
crates/aegis-storage/src/: database.rs  error.rs  lib.rs  models.rs  pool.rs  schema.rs  state_manager.rs
crates/aegis-storage/src/repository/: auth.rs  config.rs  events.rs  flagged.rs  mod.rs  profiles.rs  rules.rs  sites.rs  state.rs  stats.rs
crates/aegis-tray/: Cargo.toml
crates/aegis-tray/src/: error.rs  icon.rs  lib.rs  menu.rs  status.rs  tray.rs
crates/aegis-ui/: Cargo.toml  Dioxus.toml
crates/aegis-ui/assets/: styles.css
crates/aegis-ui/src/: app.rs  error.rs  lib.rs  state.rs  theme.rs
crates/aegis-ui/src/components/: cards.rs  icons.rs  mod.rs  sidebar.rs
crates/aegis-ui/src/views/: dashboard.rs  flagged.rs  login.rs  logs.rs  mod.rs  profiles.rs  rules.rs  settings.rs  setup.rs  system_logs.rs
docs/: CNAME  index.html  privacy.html  robots.txt  sitemap.xml
docs/css/: styles.css
docs/js/: main.js
examples/: test_uninstall.rs
extension/: .gitignore  PRIVACY.md  manifest.json  overlay.css  package-lock.json  package.json  popup.css  popup.html  tsconfig.json
extension/icons/: README.md  tmpclaude-bbe5-cwd
extension/scripts/: build-crx.js
extension/src/: api.ts  background.ts  content.ts  injected.ts  interceptor.ts  popup.ts
extension/src/sites/: chatgpt.ts  claude.ts  copilot.ts  gemini.ts  index.ts  perplexity.ts  poe.ts  types.ts
features/: F001-project-foundation.md  F002-keyword-classifier.md  F003-prompt-guard.md  F004-tiered-classification.md  F005-time-rules.md  F006-content-rules.md  F007-rule-engine.md  F008-sqlite-storage.md  F009-http-api.md  F010-browser-extension.md  F011-system-tray.md  F012-parent-dashboard.md  F012-settings-ui.md  F013-authentication.md  F014-notifications.md  F015-first-run-setup.md  F016-mitm-proxy.md  F017-interception-mode.md  F018-protection-toggle.md  F019-user-profiles.md  F020-clean-uninstall.md  F021-build-pipeline.md  F022-native-installers.md  F023-auto-update.md  F024-extension-deployment.md  F025-community-rules.md  F026-smart-content-parsing.md  F027-dynamic-site-registry.md  F028-background-service.md  F029-profile-aware-proxy.md  F030-autostart-persistence.md  F031-sentiment-analysis.md  F032-centralized-state.md  F033-image-content-filtering.md  INDEX.md  TEMPLATE.md
scripts/: build-appimage.sh  build-release.ps1  build-release.sh
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
