[package]
name = "aegis-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Main binary for Aegis AI safety platform"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-storage.workspace = true
aegis-server.workspace = true
aegis-proxy.workspace = true
aegis-ui.workspace = true
aegis-tray.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
directories.workspace = true
thiserror.workspace = true
chrono.workspace = true
csv = "1.3"

[dev-dependencies]
tempfile = "3.14"

[[example]]
name = "test_uninstall"
path = "../../examples/test_uninstall.rs"
