[package]
name = "aegis-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Main binary for Aegis AI safety platform"

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-storage.workspace = true
aegis-server.workspace = true
aegis-proxy.workspace = true
aegis-ui.workspace = true
aegis-tray.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender.workspace = true
clap.workspace = true
anyhow.workspace = true
directories.workspace = true
thiserror.workspace = true
serde_json.workspace = true
open = "5.3"
auto-launch = "0.5"
chrono.workspace = true
csv = "1.3"

# For draining stale events from global receivers
muda = "0.15"
tray-icon = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.14"

[[example]]
name = "test_uninstall"
path = "../../examples/test_uninstall.rs"
