[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core classification, rules, and authentication logic for Aegis"

[features]
default = ["notifications"]
ml = ["dep:ort", "dep:ndarray", "dep:tokenizers"]
notifications = ["dep:notify-rust"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono = { workspace = true, features = ["serde"] }
argon2.workspace = true
rand.workspace = true

# Optional ML dependencies (for Prompt Guard)
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

# Optional notifications
notify-rust = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
