[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for Aegis"

[dependencies]
aegis-core.workspace = true
aegis-storage.workspace = true
aegis-proxy.workspace = true
axum.workspace = true
tokio.workspace = true
socket2 = "0.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tokio-test.workspace = true
tower = { version = "0.5", features = ["util"] }
