[package]
name = "aegis-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite persistence layer for Aegis"

[dependencies]
aegis-core.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
directories.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile = "3.19"
