[package]
name = "aegis-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System tray integration for Aegis"

[dependencies]
aegis-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Cross-platform tray icon
tray-icon = "0.21"

# Menu support
muda = "0.17"

# Image loading for icons
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tokio-test.workspace = true
