[package]
name = "aegis-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Settings GUI for Aegis"

[dependencies]
aegis-core.workspace = true
aegis-storage.workspace = true
aegis-proxy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

# GUI framework
eframe = "0.33"
egui_extras = { version = "0.33", features = ["datepicker"] }

# CSV export
csv = "1.4"

# Directories
directories.workspace = true

# Open files/folders
open = "5.3"

# Autostart
auto-launch = "0.5"

# Image loading for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tokio-test.workspace = true
