[package]
name = "aegis-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Settings GUI for Aegis - Dioxus-based parent dashboard"

[dependencies]
aegis-core.workspace = true
aegis-storage.workspace = true
aegis-proxy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

# Dioxus GUI framework
dioxus = { version = "0.7", features = ["desktop"] }

# CSV export
csv = "1.4"

# Directories
directories.workspace = true

# Open files/folders
open = "5.3"

# Autostart
auto-launch = "0.6"

# Image loading for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

# HTTP client for API calls
reqwest = { workspace = true, features = ["blocking"] }

# Async runtime for polling
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
